Fixing spacing

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -39,7 +39,7 @@ a.logo-title {
 }
 
 .App-body {
-  margin: 0 auto;
+  margin: 50px auto;
   max-width: 740px;
 }
 
